Compiladores/out/production/Compiladores/y.output
   0  $accept : prog $end

   1  prog : ID BEGIN cuerpo END
   2       | ID cuerpo END
   3       | BEGIN END
   4       | ID BEGIN cuerpo
   5       | ID cuerpo
   6       | BEGIN cuerpo

   7  cuerpo : cuerpo sentencia
   8         | sentencia

   9  sentencia : sentencia_declaracion
  10            | sentencia_ejecucion
  11            | ETIQUETA

  12  sentencia_declaracion : tipo lista_variables ';'
  13                        | tipo lista_variables
  14                        | declaracion_funcion
  15                        | TYPEDEF ID ASIGNACION tipo '{' subrango '}' ';'
  16                        | TYPEDEF STRUCT '<' lista_tipos '>' '{' lista_variables '}' ID ';'
  17                        | TYPEDEF STRUCT lista_tipos '{' lista_variables '}' ID ';'
  18                        | TYPEDEF STRUCT '<' lista_tipos '>' '{' lista_variables '}' ';'

  19  subrango : DIGITO ',' DIGITO
  20           | DIGITO DIGITO
  21           | DOUBLE ',' DOUBLE

  22  declaracion_funcion : tipo FUN ID '(' parametro ')' BEGIN cuerpo_funcion END
  23                      | FUN ID '(' parametro ')' BEGIN cuerpo_funcion END
  24                      | tipo ID '(' parametro ')' BEGIN cuerpo_funcion END
  25                      | tipo FUN '(' parametro ')' BEGIN cuerpo_funcion END
  26                      | tipo FUN ID parametro BEGIN cuerpo_funcion END
  27                      | tipo FUN ID '(' ')' BEGIN cuerpo_funcion END
  28                      | tipo FUN ID '(' parametro ')' cuerpo_funcion END
  29                      | tipo FUN ID '(' parametro ')' BEGIN END

  30  sentencia_ejecucion : asignacion
  31                      | condicion_if
  32                      | sentencia_print
  33                      | REPEAT bloque_sentencia_ejecutable WHILE '(' condicion ')' ';'
  34                      | REPEAT bloque_sentencia_ejecutable '(' condicion ')' ';'
  35                      | REPEAT bloque_sentencia_ejecutable WHILE '(' condicion ')'
  36                      | REPEAT bloque_sentencia_ejecutable WHILE '(' ')' ';'
  37                      | REPEAT bloque_sentencia_ejecutable WHILE condicion ';'
  38                      | GOTO ETIQUETA ';'
  39                      | GOTO ETIQUETA
  40                      | GOTO ';'
  41                      | ETIQUETA ';'

  42  sentencia_print : OUTF CML ';'
  43                  | OUTF '(' expresion ')' ';'

  44  cuerpo_funcion : cuerpo_funcion sentencia RET '(' expresion ')' ';'
  45                 | cuerpo_funcion RET '(' expresion ')' ';'
  46                 | RET '(' expresion ')' ';'
  47                 | RET '(' expresion ')'
  48                 | '(' expresion ')' ';'
  49                 | RET expresion ';'
  50                 | sentencia

  51  parametro : tipo ID
  52            | tipo

  53  invocacion_funcion : ID '(' expresion ')'

  54  bloque_sentencia_ejecutable : BEGIN bloque_sentencia_ejecutable sentencia_ejecucion END
  55                              | BEGIN sentencia_ejecucion END

  56  condicion_if : IF condicion THEN bloque_sentencia_ejecutable END_IF ';'
  57               | IF condicion THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'
  58               | IF condicion bloque_sentencia_ejecutable END_IF ';'
  59               | IF THEN bloque_sentencia_ejecutable END_IF ';'
  60               | IF THEN END_IF ';'
  61               | IF THEN bloque_sentencia_ejecutable ';'
  62               | IF THEN bloque_sentencia_ejecutable END_IF
  63               | IF condicion THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'
  64               | IF condicion THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF
  65               | IF condicion THEN bloque_sentencia_ejecutable ELSE END_IF ';'
  66               | IF condicion THEN ELSE bloque_sentencia_ejecutable END_IF ';'
  67               | IF condicion THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'

  68  condicion : '(' expresion comparador expresion ')'

  69  asignacion : lista_variables ASIGNACION lista_expresiones ';'

  70  expresion : expresion '+' termino
  71            | expresion '-' termino
  72            | TOD '(' expresion ')'
  73            | termino

  74  termino : termino '*' factor
  75          | termino '/' factor
  76          | factor

  77  factor : ID
  78         | DIGITO
  79         | '-' DIGITO
  80         | HEXA
  81         | '-' HEXA
  82         | invocacion_funcion
  83         | DOUBLE
  84         | '-' DOUBLE

  85  lista_variables : lista_variables ',' ID
  86                  | lista_variables ',' ID '.' ID
  87                  | ID '.' ID
  88                  | ID

  89  lista_expresiones : lista_expresiones ',' expresion
  90                    | expresion

  91  lista_tipos : lista_tipos ',' tipo
  92              | tipo

  93  tipo : LONGINT
  94       | DOUBLE
  95       | ID

  96  comparador : '<'
  97             | '>'
  98             | "MAYOR_IGUAL"
  99             | "MENOR_IGUAL"
 100             | "DISTINTO"

state 0
	$accept : . prog $end  (0)

	BEGIN  shift 1
	ID  shift 2
	.  error

	prog  goto 3


state 1
	prog : BEGIN . END  (3)
	prog : BEGIN . cuerpo  (6)

	IF  shift 4
	END  shift 5
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	DOUBLE  shift 12
	LONGINT  shift 13
	ETIQUETA  shift 14
	.  error

	cuerpo  goto 15
	sentencia  goto 16
	sentencia_declaracion  goto 17
	sentencia_ejecucion  goto 18
	tipo  goto 19
	lista_variables  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24


state 2
	prog : ID . BEGIN cuerpo END  (1)
	prog : ID . cuerpo END  (2)
	prog : ID . BEGIN cuerpo  (4)
	prog : ID . cuerpo  (5)

	IF  shift 4
	BEGIN  shift 25
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	DOUBLE  shift 12
	LONGINT  shift 13
	ETIQUETA  shift 14
	.  error

	cuerpo  goto 26
	sentencia  goto 16
	sentencia_declaracion  goto 17
	sentencia_ejecucion  goto 18
	tipo  goto 19
	lista_variables  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24


state 3
	$accept : prog . $end  (0)

	$end  accept


state 4
	condicion_if : IF . condicion THEN bloque_sentencia_ejecutable END_IF ';'  (56)
	condicion_if : IF . condicion THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (57)
	condicion_if : IF . condicion bloque_sentencia_ejecutable END_IF ';'  (58)
	condicion_if : IF . THEN bloque_sentencia_ejecutable END_IF ';'  (59)
	condicion_if : IF . THEN END_IF ';'  (60)
	condicion_if : IF . THEN bloque_sentencia_ejecutable ';'  (61)
	condicion_if : IF . THEN bloque_sentencia_ejecutable END_IF  (62)
	condicion_if : IF . condicion THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'  (63)
	condicion_if : IF . condicion THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF  (64)
	condicion_if : IF . condicion THEN bloque_sentencia_ejecutable ELSE END_IF ';'  (65)
	condicion_if : IF . condicion THEN ELSE bloque_sentencia_ejecutable END_IF ';'  (66)
	condicion_if : IF . condicion THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'  (67)

	THEN  shift 27
	'('  shift 28
	.  error

	condicion  goto 29


state 5
	prog : BEGIN END .  (3)

	.  reduce 3


state 6
	sentencia_print : OUTF . CML ';'  (42)
	sentencia_print : OUTF . '(' expresion ')' ';'  (43)

	CML  shift 30
	'('  shift 31
	.  error


state 7
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo '{' subrango '}' ';'  (15)
	sentencia_declaracion : TYPEDEF . STRUCT '<' lista_tipos '>' '{' lista_variables '}' ID ';'  (16)
	sentencia_declaracion : TYPEDEF . STRUCT lista_tipos '{' lista_variables '}' ID ';'  (17)
	sentencia_declaracion : TYPEDEF . STRUCT '<' lista_tipos '>' '{' lista_variables '}' ';'  (18)

	ID  shift 32
	STRUCT  shift 33
	.  error


state 8
	declaracion_funcion : FUN . ID '(' parametro ')' BEGIN cuerpo_funcion END  (23)

	ID  shift 34
	.  error


state 9
	sentencia_ejecucion : REPEAT . bloque_sentencia_ejecutable WHILE '(' condicion ')' ';'  (33)
	sentencia_ejecucion : REPEAT . bloque_sentencia_ejecutable '(' condicion ')' ';'  (34)
	sentencia_ejecucion : REPEAT . bloque_sentencia_ejecutable WHILE '(' condicion ')'  (35)
	sentencia_ejecucion : REPEAT . bloque_sentencia_ejecutable WHILE '(' ')' ';'  (36)
	sentencia_ejecucion : REPEAT . bloque_sentencia_ejecutable WHILE condicion ';'  (37)

	BEGIN  shift 35
	.  error

	bloque_sentencia_ejecutable  goto 36


state 10
	sentencia_ejecucion : GOTO . ETIQUETA ';'  (38)
	sentencia_ejecucion : GOTO . ETIQUETA  (39)
	sentencia_ejecucion : GOTO . ';'  (40)

	ETIQUETA  shift 37
	';'  shift 38
	.  error


state 11
	lista_variables : ID . '.' ID  (87)
	lista_variables : ID .  (88)
	tipo : ID .  (95)

	'.'  shift 39
	FUN  reduce 95
	ID  reduce 95
	ASIGNACION  reduce 88
	','  reduce 88


state 12
	tipo : DOUBLE .  (94)

	.  reduce 94


state 13
	tipo : LONGINT .  (93)

	.  reduce 93


state 14
	sentencia : ETIQUETA .  (11)
	sentencia_ejecucion : ETIQUETA . ';'  (41)

	';'  shift 40
	$end  reduce 11
	IF  reduce 11
	END  reduce 11
	OUTF  reduce 11
	TYPEDEF  reduce 11
	FUN  reduce 11
	RET  reduce 11
	REPEAT  reduce 11
	GOTO  reduce 11
	ID  reduce 11
	DOUBLE  reduce 11
	LONGINT  reduce 11
	ETIQUETA  reduce 11


state 15
	prog : BEGIN cuerpo .  (6)
	cuerpo : cuerpo . sentencia  (7)

	IF  shift 4
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	DOUBLE  shift 12
	LONGINT  shift 13
	ETIQUETA  shift 14
	$end  reduce 6

	sentencia  goto 41
	sentencia_declaracion  goto 17
	sentencia_ejecucion  goto 18
	tipo  goto 19
	lista_variables  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24


state 16
	cuerpo : sentencia .  (8)

	.  reduce 8


state 17
	sentencia : sentencia_declaracion .  (9)

	.  reduce 9


state 18
	sentencia : sentencia_ejecucion .  (10)

	.  reduce 10


state 19
	sentencia_declaracion : tipo . lista_variables ';'  (12)
	sentencia_declaracion : tipo . lista_variables  (13)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' BEGIN cuerpo_funcion END  (22)
	declaracion_funcion : tipo . ID '(' parametro ')' BEGIN cuerpo_funcion END  (24)
	declaracion_funcion : tipo . FUN '(' parametro ')' BEGIN cuerpo_funcion END  (25)
	declaracion_funcion : tipo . FUN ID parametro BEGIN cuerpo_funcion END  (26)
	declaracion_funcion : tipo . FUN ID '(' ')' BEGIN cuerpo_funcion END  (27)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' cuerpo_funcion END  (28)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' BEGIN END  (29)

	FUN  shift 42
	ID  shift 43
	.  error

	lista_variables  goto 44


state 20
	asignacion : lista_variables . ASIGNACION lista_expresiones ';'  (69)
	lista_variables : lista_variables . ',' ID  (85)
	lista_variables : lista_variables . ',' ID '.' ID  (86)

	ASIGNACION  shift 45
	','  shift 46
	.  error


state 21
	sentencia_declaracion : declaracion_funcion .  (14)

	.  reduce 14


state 22
	sentencia_ejecucion : asignacion .  (30)

	.  reduce 30


state 23
	sentencia_ejecucion : condicion_if .  (31)

	.  reduce 31


state 24
	sentencia_ejecucion : sentencia_print .  (32)

	.  reduce 32


state 25
	prog : ID BEGIN . cuerpo END  (1)
	prog : ID BEGIN . cuerpo  (4)

	IF  shift 4
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	DOUBLE  shift 12
	LONGINT  shift 13
	ETIQUETA  shift 14
	.  error

	cuerpo  goto 47
	sentencia  goto 16
	sentencia_declaracion  goto 17
	sentencia_ejecucion  goto 18
	tipo  goto 19
	lista_variables  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24


state 26
	prog : ID cuerpo . END  (2)
	prog : ID cuerpo .  (5)
	cuerpo : cuerpo . sentencia  (7)

	IF  shift 4
	END  shift 48
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	DOUBLE  shift 12
	LONGINT  shift 13
	ETIQUETA  shift 14
	$end  reduce 5

	sentencia  goto 41
	sentencia_declaracion  goto 17
	sentencia_ejecucion  goto 18
	tipo  goto 19
	lista_variables  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24


state 27
	condicion_if : IF THEN . bloque_sentencia_ejecutable END_IF ';'  (59)
	condicion_if : IF THEN . END_IF ';'  (60)
	condicion_if : IF THEN . bloque_sentencia_ejecutable ';'  (61)
	condicion_if : IF THEN . bloque_sentencia_ejecutable END_IF  (62)

	BEGIN  shift 35
	END_IF  shift 49
	.  error

	bloque_sentencia_ejecutable  goto 50


state 28
	condicion : '(' . expresion comparador expresion ')'  (68)

	ID  shift 51
	DIGITO  shift 52
	HEXA  shift 53
	DOUBLE  shift 54
	TOD  shift 55
	'-'  shift 56
	.  error

	expresion  goto 57
	invocacion_funcion  goto 58
	termino  goto 59
	factor  goto 60


state 29
	condicion_if : IF condicion . THEN bloque_sentencia_ejecutable END_IF ';'  (56)
	condicion_if : IF condicion . THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (57)
	condicion_if : IF condicion . bloque_sentencia_ejecutable END_IF ';'  (58)
	condicion_if : IF condicion . THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'  (63)
	condicion_if : IF condicion . THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF  (64)
	condicion_if : IF condicion . THEN bloque_sentencia_ejecutable ELSE END_IF ';'  (65)
	condicion_if : IF condicion . THEN ELSE bloque_sentencia_ejecutable END_IF ';'  (66)
	condicion_if : IF condicion . THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'  (67)

	THEN  shift 61
	BEGIN  shift 35
	.  error

	bloque_sentencia_ejecutable  goto 62


state 30
	sentencia_print : OUTF CML . ';'  (42)

	';'  shift 63
	.  error


state 31
	sentencia_print : OUTF '(' . expresion ')' ';'  (43)

	ID  shift 51
	DIGITO  shift 52
	HEXA  shift 53
	DOUBLE  shift 54
	TOD  shift 55
	'-'  shift 56
	.  error

	expresion  goto 64
	invocacion_funcion  goto 58
	termino  goto 59
	factor  goto 60


state 32
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo '{' subrango '}' ';'  (15)

	ASIGNACION  shift 65
	.  error


state 33
	sentencia_declaracion : TYPEDEF STRUCT . '<' lista_tipos '>' '{' lista_variables '}' ID ';'  (16)
	sentencia_declaracion : TYPEDEF STRUCT . lista_tipos '{' lista_variables '}' ID ';'  (17)
	sentencia_declaracion : TYPEDEF STRUCT . '<' lista_tipos '>' '{' lista_variables '}' ';'  (18)

	ID  shift 66
	DOUBLE  shift 12
	LONGINT  shift 13
	'<'  shift 67
	.  error

	tipo  goto 68
	lista_tipos  goto 69


state 34
	declaracion_funcion : FUN ID . '(' parametro ')' BEGIN cuerpo_funcion END  (23)

	'('  shift 70
	.  error


state 35
	bloque_sentencia_ejecutable : BEGIN . bloque_sentencia_ejecutable sentencia_ejecucion END  (54)
	bloque_sentencia_ejecutable : BEGIN . sentencia_ejecucion END  (55)

	IF  shift 4
	BEGIN  shift 35
	OUTF  shift 6
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 71
	ETIQUETA  shift 72
	.  error

	sentencia_ejecucion  goto 73
	lista_variables  goto 20
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24
	bloque_sentencia_ejecutable  goto 74


state 36
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable . WHILE '(' condicion ')' ';'  (33)
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable . '(' condicion ')' ';'  (34)
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable . WHILE '(' condicion ')'  (35)
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable . WHILE '(' ')' ';'  (36)
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable . WHILE condicion ';'  (37)

	WHILE  shift 75
	'('  shift 76
	.  error


state 37
	sentencia_ejecucion : GOTO ETIQUETA . ';'  (38)
	sentencia_ejecucion : GOTO ETIQUETA .  (39)

	';'  shift 77
	$end  reduce 39
	IF  reduce 39
	END  reduce 39
	OUTF  reduce 39
	TYPEDEF  reduce 39
	FUN  reduce 39
	RET  reduce 39
	REPEAT  reduce 39
	GOTO  reduce 39
	ID  reduce 39
	DOUBLE  reduce 39
	LONGINT  reduce 39
	ETIQUETA  reduce 39


state 38
	sentencia_ejecucion : GOTO ';' .  (40)

	.  reduce 40


state 39
	lista_variables : ID '.' . ID  (87)

	ID  shift 78
	.  error


state 40
	sentencia_ejecucion : ETIQUETA ';' .  (41)

	.  reduce 41


state 41
	cuerpo : cuerpo sentencia .  (7)

	.  reduce 7


state 42
	declaracion_funcion : tipo FUN . ID '(' parametro ')' BEGIN cuerpo_funcion END  (22)
	declaracion_funcion : tipo FUN . '(' parametro ')' BEGIN cuerpo_funcion END  (25)
	declaracion_funcion : tipo FUN . ID parametro BEGIN cuerpo_funcion END  (26)
	declaracion_funcion : tipo FUN . ID '(' ')' BEGIN cuerpo_funcion END  (27)
	declaracion_funcion : tipo FUN . ID '(' parametro ')' cuerpo_funcion END  (28)
	declaracion_funcion : tipo FUN . ID '(' parametro ')' BEGIN END  (29)

	ID  shift 79
	'('  shift 80
	.  error


state 43
	declaracion_funcion : tipo ID . '(' parametro ')' BEGIN cuerpo_funcion END  (24)
	lista_variables : ID . '.' ID  (87)
	lista_variables : ID .  (88)

	'('  shift 81
	'.'  shift 39
	$end  reduce 88
	IF  reduce 88
	END  reduce 88
	OUTF  reduce 88
	TYPEDEF  reduce 88
	FUN  reduce 88
	RET  reduce 88
	REPEAT  reduce 88
	GOTO  reduce 88
	ID  reduce 88
	DOUBLE  reduce 88
	LONGINT  reduce 88
	ETIQUETA  reduce 88
	';'  reduce 88
	','  reduce 88


state 44
	sentencia_declaracion : tipo lista_variables . ';'  (12)
	sentencia_declaracion : tipo lista_variables .  (13)
	lista_variables : lista_variables . ',' ID  (85)
	lista_variables : lista_variables . ',' ID '.' ID  (86)

	';'  shift 82
	','  shift 46
	$end  reduce 13
	IF  reduce 13
	END  reduce 13
	OUTF  reduce 13
	TYPEDEF  reduce 13
	FUN  reduce 13
	RET  reduce 13
	REPEAT  reduce 13
	GOTO  reduce 13
	ID  reduce 13
	DOUBLE  reduce 13
	LONGINT  reduce 13
	ETIQUETA  reduce 13


state 45
	asignacion : lista_variables ASIGNACION . lista_expresiones ';'  (69)

	ID  shift 51
	DIGITO  shift 52
	HEXA  shift 53
	DOUBLE  shift 54
	TOD  shift 55
	'-'  shift 56
	.  error

	expresion  goto 83
	invocacion_funcion  goto 58
	lista_expresiones  goto 84
	termino  goto 59
	factor  goto 60


state 46
	lista_variables : lista_variables ',' . ID  (85)
	lista_variables : lista_variables ',' . ID '.' ID  (86)

	ID  shift 85
	.  error


state 47
	prog : ID BEGIN cuerpo . END  (1)
	prog : ID BEGIN cuerpo .  (4)
	cuerpo : cuerpo . sentencia  (7)

	IF  shift 4
	END  shift 86
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	DOUBLE  shift 12
	LONGINT  shift 13
	ETIQUETA  shift 14
	$end  reduce 4

	sentencia  goto 41
	sentencia_declaracion  goto 17
	sentencia_ejecucion  goto 18
	tipo  goto 19
	lista_variables  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24


state 48
	prog : ID cuerpo END .  (2)

	.  reduce 2


state 49
	condicion_if : IF THEN END_IF . ';'  (60)

	';'  shift 87
	.  error


state 50
	condicion_if : IF THEN bloque_sentencia_ejecutable . END_IF ';'  (59)
	condicion_if : IF THEN bloque_sentencia_ejecutable . ';'  (61)
	condicion_if : IF THEN bloque_sentencia_ejecutable . END_IF  (62)

	END_IF  shift 88
	';'  shift 89
	.  error


state 51
	invocacion_funcion : ID . '(' expresion ')'  (53)
	factor : ID .  (77)

	'('  shift 90
	'+'  reduce 77
	'-'  reduce 77
	'*'  reduce 77
	'/'  reduce 77
	';'  reduce 77
	'<'  reduce 77
	'>'  reduce 77
	','  reduce 77
	')'  reduce 77
	"MAYOR_IGUAL"  reduce 77
	"MENOR_IGUAL"  reduce 77
	"DISTINTO"  reduce 77


state 52
	factor : DIGITO .  (78)

	.  reduce 78


state 53
	factor : HEXA .  (80)

	.  reduce 80


state 54
	factor : DOUBLE .  (83)

	.  reduce 83


state 55
	expresion : TOD . '(' expresion ')'  (72)

	'('  shift 91
	.  error


state 56
	factor : '-' . DIGITO  (79)
	factor : '-' . HEXA  (81)
	factor : '-' . DOUBLE  (84)

	DIGITO  shift 92
	HEXA  shift 93
	DOUBLE  shift 94
	.  error


state 57
	condicion : '(' expresion . comparador expresion ')'  (68)
	expresion : expresion . '+' termino  (70)
	expresion : expresion . '-' termino  (71)

	'+'  shift 95
	'-'  shift 96
	'<'  shift 97
	'>'  shift 98
	"MAYOR_IGUAL"  shift 99
	"MENOR_IGUAL"  shift 100
	"DISTINTO"  shift 101
	.  error

	comparador  goto 102


state 58
	factor : invocacion_funcion .  (82)

	.  reduce 82


state 59
	expresion : termino .  (73)
	termino : termino . '*' factor  (74)
	termino : termino . '/' factor  (75)

	'*'  shift 103
	'/'  shift 104
	'+'  reduce 73
	'-'  reduce 73
	';'  reduce 73
	'<'  reduce 73
	'>'  reduce 73
	','  reduce 73
	')'  reduce 73
	"MAYOR_IGUAL"  reduce 73
	"MENOR_IGUAL"  reduce 73
	"DISTINTO"  reduce 73


state 60
	termino : factor .  (76)

	.  reduce 76


state 61
	condicion_if : IF condicion THEN . bloque_sentencia_ejecutable END_IF ';'  (56)
	condicion_if : IF condicion THEN . bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (57)
	condicion_if : IF condicion THEN . bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'  (63)
	condicion_if : IF condicion THEN . bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF  (64)
	condicion_if : IF condicion THEN . bloque_sentencia_ejecutable ELSE END_IF ';'  (65)
	condicion_if : IF condicion THEN . ELSE bloque_sentencia_ejecutable END_IF ';'  (66)
	condicion_if : IF condicion THEN . bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'  (67)

	ELSE  shift 105
	BEGIN  shift 35
	.  error

	bloque_sentencia_ejecutable  goto 106


state 62
	condicion_if : IF condicion bloque_sentencia_ejecutable . END_IF ';'  (58)

	END_IF  shift 107
	.  error


state 63
	sentencia_print : OUTF CML ';' .  (42)

	.  reduce 42


state 64
	sentencia_print : OUTF '(' expresion . ')' ';'  (43)
	expresion : expresion . '+' termino  (70)
	expresion : expresion . '-' termino  (71)

	'+'  shift 95
	'-'  shift 96
	')'  shift 108
	.  error


state 65
	sentencia_declaracion : TYPEDEF ID ASIGNACION . tipo '{' subrango '}' ';'  (15)

	ID  shift 66
	DOUBLE  shift 12
	LONGINT  shift 13
	.  error

	tipo  goto 109


state 66
	tipo : ID .  (95)

	.  reduce 95


state 67
	sentencia_declaracion : TYPEDEF STRUCT '<' . lista_tipos '>' '{' lista_variables '}' ID ';'  (16)
	sentencia_declaracion : TYPEDEF STRUCT '<' . lista_tipos '>' '{' lista_variables '}' ';'  (18)

	ID  shift 66
	DOUBLE  shift 12
	LONGINT  shift 13
	.  error

	tipo  goto 68
	lista_tipos  goto 110


state 68
	lista_tipos : tipo .  (92)

	.  reduce 92


state 69
	sentencia_declaracion : TYPEDEF STRUCT lista_tipos . '{' lista_variables '}' ID ';'  (17)
	lista_tipos : lista_tipos . ',' tipo  (91)

	'{'  shift 111
	','  shift 112
	.  error


state 70
	declaracion_funcion : FUN ID '(' . parametro ')' BEGIN cuerpo_funcion END  (23)

	ID  shift 66
	DOUBLE  shift 12
	LONGINT  shift 13
	.  error

	tipo  goto 113
	parametro  goto 114


state 71
	lista_variables : ID . '.' ID  (87)
	lista_variables : ID .  (88)

	'.'  shift 39
	ASIGNACION  reduce 88
	'}'  reduce 88
	','  reduce 88


state 72
	sentencia_ejecucion : ETIQUETA . ';'  (41)

	';'  shift 40
	.  error


state 73
	bloque_sentencia_ejecutable : BEGIN sentencia_ejecucion . END  (55)

	END  shift 115
	.  error


state 74
	bloque_sentencia_ejecutable : BEGIN bloque_sentencia_ejecutable . sentencia_ejecucion END  (54)

	IF  shift 4
	OUTF  shift 6
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 71
	ETIQUETA  shift 72
	.  error

	sentencia_ejecucion  goto 116
	lista_variables  goto 20
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24


state 75
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable WHILE . '(' condicion ')' ';'  (33)
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable WHILE . '(' condicion ')'  (35)
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable WHILE . '(' ')' ';'  (36)
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable WHILE . condicion ';'  (37)

	'('  shift 117
	.  error

	condicion  goto 118


state 76
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable '(' . condicion ')' ';'  (34)

	'('  shift 28
	.  error

	condicion  goto 119


state 77
	sentencia_ejecucion : GOTO ETIQUETA ';' .  (38)

	.  reduce 38


state 78
	lista_variables : ID '.' ID .  (87)

	.  reduce 87


state 79
	declaracion_funcion : tipo FUN ID . '(' parametro ')' BEGIN cuerpo_funcion END  (22)
	declaracion_funcion : tipo FUN ID . parametro BEGIN cuerpo_funcion END  (26)
	declaracion_funcion : tipo FUN ID . '(' ')' BEGIN cuerpo_funcion END  (27)
	declaracion_funcion : tipo FUN ID . '(' parametro ')' cuerpo_funcion END  (28)
	declaracion_funcion : tipo FUN ID . '(' parametro ')' BEGIN END  (29)

	ID  shift 66
	DOUBLE  shift 12
	LONGINT  shift 13
	'('  shift 120
	.  error

	tipo  goto 113
	parametro  goto 121


state 80
	declaracion_funcion : tipo FUN '(' . parametro ')' BEGIN cuerpo_funcion END  (25)

	ID  shift 66
	DOUBLE  shift 12
	LONGINT  shift 13
	.  error

	tipo  goto 113
	parametro  goto 122


state 81
	declaracion_funcion : tipo ID '(' . parametro ')' BEGIN cuerpo_funcion END  (24)

	ID  shift 66
	DOUBLE  shift 12
	LONGINT  shift 13
	.  error

	tipo  goto 113
	parametro  goto 123


state 82
	sentencia_declaracion : tipo lista_variables ';' .  (12)

	.  reduce 12


state 83
	expresion : expresion . '+' termino  (70)
	expresion : expresion . '-' termino  (71)
	lista_expresiones : expresion .  (90)

	'+'  shift 95
	'-'  shift 96
	';'  reduce 90
	','  reduce 90


state 84
	asignacion : lista_variables ASIGNACION lista_expresiones . ';'  (69)
	lista_expresiones : lista_expresiones . ',' expresion  (89)

	';'  shift 124
	','  shift 125
	.  error


state 85
	lista_variables : lista_variables ',' ID .  (85)
	lista_variables : lista_variables ',' ID . '.' ID  (86)

	'.'  shift 126
	$end  reduce 85
	IF  reduce 85
	END  reduce 85
	OUTF  reduce 85
	TYPEDEF  reduce 85
	FUN  reduce 85
	RET  reduce 85
	REPEAT  reduce 85
	GOTO  reduce 85
	ID  reduce 85
	DOUBLE  reduce 85
	LONGINT  reduce 85
	ASIGNACION  reduce 85
	ETIQUETA  reduce 85
	';'  reduce 85
	'}'  reduce 85
	','  reduce 85


state 86
	prog : ID BEGIN cuerpo END .  (1)

	.  reduce 1


state 87
	condicion_if : IF THEN END_IF ';' .  (60)

	.  reduce 60


state 88
	condicion_if : IF THEN bloque_sentencia_ejecutable END_IF . ';'  (59)
	condicion_if : IF THEN bloque_sentencia_ejecutable END_IF .  (62)

	';'  shift 127
	$end  reduce 62
	IF  reduce 62
	END  reduce 62
	OUTF  reduce 62
	TYPEDEF  reduce 62
	FUN  reduce 62
	RET  reduce 62
	REPEAT  reduce 62
	GOTO  reduce 62
	ID  reduce 62
	DOUBLE  reduce 62
	LONGINT  reduce 62
	ETIQUETA  reduce 62


state 89
	condicion_if : IF THEN bloque_sentencia_ejecutable ';' .  (61)

	.  reduce 61


state 90
	invocacion_funcion : ID '(' . expresion ')'  (53)

	ID  shift 51
	DIGITO  shift 52
	HEXA  shift 53
	DOUBLE  shift 54
	TOD  shift 55
	'-'  shift 56
	.  error

	expresion  goto 128
	invocacion_funcion  goto 58
	termino  goto 59
	factor  goto 60

